--- a/steps.html
+++ b/steps.html
@@ -39,11 +39,17 @@
   </head>
   <body>
     <div class="container py-4">
-      <!-- step1  -->
       <div class="steps-container py-5 d-flex justify-content-center">
-        <div class="box-shadow br-radius24 col-12 col-lg-9 col-xl-9 pt-4 pb-5">
+        <!-- step1 -->
+        <div
+          class="box-shadow br-radius24 col-12 col-lg-9 col-xl-9 pt-4 pb-5"
+          id="step1"
+        >
           <div class="close-container">
-            <div class="cross-img-container">
+            <div
+              class="cross-img-container cursor-pointer"
+              onclick="window.location.href='index.html'"
+            >
               <img src="./assets/images/close.png" alt="" class="h-15px" />
             </div>
           </div>
@@ -89,7 +95,7 @@
                     "
                     onclick="myFunction()"
                   >
-                    <h6 class="m-0 fs-17 dark-blue2">Accountat</h6>
+                    <h6 class="m-0 fs-17 dark-blue2 font-weight-500">ACCOUNTANT</h6>
                     <img
                       src="./assets/images/down-arrow-green.png"
                       class="h-15px"
@@ -215,43 +221,51 @@
           <div class="d-flex justify-content-center pt-5">
             <div
               class="
-              buttons-container
-              d-flex
-              flex-column
-              flex-lg-row
-              flex-xl-row
-              justify-content-center
-              justify-content-lg-between
-              justify-content-xl-between
-              align-items-center
-              col-12
-              px-1
-              col-lg-8 col-xl-8
+                buttons-container
+                d-flex
+                flex-column flex-lg-row flex-xl-row
+                justify-content-center
+                justify-content-lg-between
+                justify-content-xl-between
+                align-items-center
+                col-12
+                px-1
+                col-lg-8 col-xl-8
               "
             >
               <!-- left side -->
-              <div class="back-button d-flex align-items-center">
+              <div
+                class="back-button d-flex align-items-center cursor-pointer"
+                onclick="window.location.href='index.html'"
+              >
                 <img
                   src="./assets/images/down-arrow-green2.png"
                   alt=""
                   class="h-15px"
                 />
-                <p class="px-3 m-0 fs-16 firtStep-backBtn">Back</p>
+                <p class="px-3 m-0 fs-16 firtStep-backBtn">BACK</p>
               </div>
               <div class="py-3 py-lg-0 py-xl-0">
-                <button class="active-button br-radius12 py-3 px-4 fs-22">
+                <button
+                  class="active-button br-radius7 activebutton-padding fs-22"
+                  onclick="activeStep(`step2`)"
+                >
                   Next
                 </button>
               </div>
             </div>
           </div>
         </div>
-      </div>
-      <!-- step 2 -->
-      <div class="steps-container py-5 d-flex justify-content-center">
-        <div class="box-shadow br-radius24 col-12 col-lg-9 col-xl-9 pt-4 pb-5">
+        <!-- step2 -->
+        <div
+          class="box-shadow br-radius24 col-12 col-lg-9 col-xl-9 pt-4 pb-5"
+          id="step2"
+        >
           <div class="close-container">
-            <div class="cross-img-container">
+            <div
+              class="cross-img-container cursor-pointer"
+              onclick="window.location.href='index.html'"
+            >
               <img src="./assets/images/close.png" alt="" class="h-15px" />
             </div>
           </div>
@@ -279,55 +293,63 @@
                   br-radius12
                 "
                 rows="5"
-                placeholder="Give a brief description of your case"
+                placeholder="GIVE A BRIEF DESCRIPTION OF YOUR CASE"
               ></textarea>
-              <p class="dark-blue2 fs-15 m-0 py-3 px-1">
-                You do not need to provide a detailed description. Our experts
-                will validate your case before we match you with relevant
-                advisors.
+              <p class="dark-blue2 fs-15 m-0 py-3 px-1 font-weight-300">
+                YOU DO NOT NEED TO PROVIDE A DETAILED DESCRIPTION. OUR EXPERTS
+                WILL VALIDATE YOUR CASE BEFORE WE MATCH YOU WITH RELEVANT
+                ADVISORS.
               </p>
             </div>
           </div>
           <div class="d-flex justify-content-center">
             <div
               class="
-              buttons-container
-              d-flex
-              flex-column
-              flex-lg-row
-              flex-xl-row
-              justify-content-center
-              justify-content-lg-between
-              justify-content-xl-between
-              align-items-center
-              col-12
-              px-1
-              col-lg-8 col-xl-8
+                buttons-container
+                d-flex
+                flex-column flex-lg-row flex-xl-row
+                justify-content-center
+                justify-content-lg-between
+                justify-content-xl-between
+                align-items-center
+                col-12
+                px-1
+                col-lg-8 col-xl-8
               "
             >
               <!-- left side -->
-              <div class="back-button d-flex align-items-center">
+              <div
+                class="back-button d-flex align-items-center cursor-pointer"
+                onclick="activeStep('step1')"
+              >
                 <img
                   src="./assets/images/down-arrow-green2.png"
                   alt=""
                   class="h-15px"
                 />
-                <p class="px-3 m-0 fs-16 primary">Back</p>
+                <p class="px-3 m-0 fs-16 primary">BACK</p>
               </div>
               <div class="py-3 py-lg-0 py-xl-0">
-                <button class="active-button br-radius12 py-3 px-4 fs-22">
+                <button
+                  class="active-button br-radius7 activebutton-padding fs-22"
+                  onclick="activeStep('step3')"
+                >
                   Skip this Step
                 </button>
               </div>
             </div>
           </div>
         </div>
-      </div>
-      <!-- step3 -->
-      <div class="steps-container py-5 d-flex justify-content-center">
-        <div class="box-shadow br-radius24 col-12 col-lg-9 col-xl-9 pt-4 pb-5">
+        <!-- step3  -->
+        <div
+          class="box-shadow br-radius24 col-12 col-lg-9 col-xl-9 pt-4 pb-5"
+          id="step3"
+        >
           <div class="close-container">
-            <div class="cross-img-container">
+            <div
+              class="cross-img-container cursor-pointer"
+              onclick="window.location.href='index.html'"
+            >
               <img src="./assets/images/close.png" alt="" class="h-15px" />
             </div>
           </div>
@@ -356,55 +378,63 @@
                   br-radius12
                 "
                 rows="5"
-                placeholder="If I will add some description about my case then button will automatically Convert to `Proceed to the last step`."
+                placeholder='IF I WILL ADD SOME DESCRIPTION ABOUT MY CASE THEN BUTTON WILL AUTOMATICALLY CONVERT TO "PROCEED TO THE LAST STEP".'
               ></textarea>
-              <p class="dark-blue2 fs-15 m-0 py-3 px-1">
-                You do not need to provide a detailed description. Our experts
-                will validate your case before we match you with relevant
-                advisors.
+              <p class="dark-blue2 fs-15 m-0 py-3 px-1 font-weight-300">
+                YOU DO NOT NEED TO PROVIDE A DETAILED DESCRIPTION. OUR EXPERTS
+                WILL VALIDATE YOUR CASE BEFORE WE MATCH YOU WITH RELEVANT
+                ADVISORS.
               </p>
             </div>
           </div>
           <div class="d-flex justify-content-center">
             <div
               class="
-              buttons-container
-              d-flex
-              flex-column
-              flex-lg-row
-              flex-xl-row
-              justify-content-center
-              justify-content-lg-between
-              justify-content-xl-between
-              align-items-center
-              col-12
-              px-1
-              col-lg-8 col-xl-8
-            "
+                buttons-container
+                d-flex
+                flex-column flex-lg-row flex-xl-row
+                justify-content-center
+                justify-content-lg-between
+                justify-content-xl-between
+                align-items-center
+                col-12
+                px-1
+                col-lg-8 col-xl-8
+              "
             >
               <!-- left side -->
-              <div class="back-button d-flex align-items-center">
+              <div
+                class="back-button d-flex align-items-center cursor-pointer"
+                onclick="activeStep('step2')"
+              >
                 <img
                   src="./assets/images/down-arrow-green2.png"
                   alt=""
                   class="h-15px"
                 />
-                <p class="px-3 m-0 fs-16 primary">Back</p>
+                <p class="px-3 m-0 fs-16 primary">BACK</p>
               </div>
               <div class="py-3 py-lg-0 py-xl-0">
-                <button class="active-button br-radius12 py-3 px-4 fs-22">
+                <button
+                  class="active-button br-radius7 activebutton-padding fs-22"
+                  onclick="activeStep('step4')"
+                >
                   Proceed to the last step
                 </button>
               </div>
             </div>
           </div>
         </div>
-      </div>
-      <!-- step 4 -->
-      <div class="steps-container py-5 d-flex justify-content-center">
-        <div class="box-shadow br-radius24 col-12 col-lg-9 col-xl-9 pt-4 pb-5">
+        <!-- step4 -->
+        <div
+          class="box-shadow br-radius24 col-12 col-lg-9 col-xl-9 pt-4 pb-5"
+          id="step4"
+        >
           <div class="close-container">
-            <div class="cross-img-container">
+            <div
+              class="cross-img-container cursor-pointer"
+              onclick="window.location.href='index.html'"
+            >
               <img src="./assets/images/close.png" alt="" class="h-15px" />
             </div>
           </div>
@@ -421,7 +451,14 @@
           <div class="d-flex justify-content-center py-3">
             <div class="col-10 col-lg-8 col-xl-8 px-0 px-0">
               <!-- 1st row -->
-              <div class="d-flex justify-content-between flex-wrap py-0 py-lg-2 py-xl-2">
+              <div
+                class="
+                  d-flex
+                  justify-content-between
+                  flex-wrap
+                  py-0 py-lg-2 py-xl-2
+                "
+              >
                 <div class="col-12 col-lg-6 col-xl-6 px-2">
                   <input
                     class="
@@ -452,7 +489,14 @@
                 </div>
               </div>
               <!-- 2nd row -->
-              <div class="d-flex justify-content-between flex-wrap py-0 py-lg-2 py-xl-2">
+              <div
+                class="
+                  d-flex
+                  justify-content-between
+                  flex-wrap
+                  py-0 py-lg-2 py-xl-2
+                "
+              >
                 <div class="col-12 col-lg-6 col-xl-6 px-2">
                   <input
                     class="
@@ -511,7 +555,7 @@
                 </div>
                 <div>
                   <p class="m-0 fs-11">
-                    READ OUR <span class="primary">PRIVACY POLICY</span>
+                    READ OUR <span class="primary font-weight-500">PRIVACY POLICY</span>
                   </p>
                 </div>
               </div>
@@ -522,9 +566,7 @@
               class="
                 buttons-container
                 d-flex
-                flex-column
-                flex-lg-row
-                flex-xl-row
+                flex-column flex-lg-row flex-xl-row
                 justify-content-center
                 justify-content-lg-between
                 justify-content-xl-between
@@ -535,18 +577,24 @@
               "
             >
               <!-- left side -->
-              <div class="back-button d-flex align-items-center">
+              <div
+                class="back-button d-flex align-items-center cursor-pointer"
+                onclick="activeStep('step3')"
+              >
                 <img
                   src="./assets/images/down-arrow-green2.png"
                   alt=""
                   class="h-15px"
                 />
-                <p class="px-3 m-0 fs-16 primary">Back</p>
+                <p class="px-3 m-0 fs-16 primary">BACK</p>
               </div>
               <!-- right side -->
               <div class="py-3 py-lg-0 py-xl-0">
-                <button class="active-button br-radius12 py-3 px-4 fs-22">
-                  Get 3 Offers -Free and without obligation
+                <button
+                  class="active-button br-radius7 activebutton-padding fs-22"
+                  onclick="window.location.href='partners.html'"
+                >
+                  Get 3 Offers - Free and without obligation
                 </button>
               </div>
             </div>
@@ -561,6 +609,34 @@
           x.style.display = "none";
         } else {
           x.style.display = "block";
+        }
+      }
+
+      function activeStep(step) {
+        var step1 = document.getElementById("step1");
+        var step2 = document.getElementById("step2");
+        var step3 = document.getElementById("step3");
+        var step4 = document.getElementById("step4");
+        if (step === "step1") {
+          step1.style.display = "block";
+          step2.style.display = "none";
+          step3.style.display = "none";
+          step4.style.display = "none";
+        } else if (step === "step2") {
+          step1.style.display = "none";
+          step2.style.display = "block";
+          step3.style.display = "none";
+          step4.style.display = "none";
+        } else if (step === "step3") {
+          step1.style.display = "none";
+          step2.style.display = "none";
+          step3.style.display = "block";
+          step4.style.display = "none";
+        } else if (step === "step4") {
+          step1.style.display = "none";
+          step2.style.display = "none";
+          step3.style.display = "none";
+          step4.style.display = "block";
         }
       }
     </script>
