link added on Get a call button

--- a/partners.html
+++ b/partners.html
@@ -79,7 +79,10 @@
                 </button>
               </div>
               <div class="d-none d-lg-block d-xl-block">
-                <button class="inActive-button px-4 py-2 br-radius7">
+                <button
+                  class="inActive-button px-4 py-2 br-radius7"
+                  onclick="window.location.href='steps.html'"
+                >
                   Get a call
                 </button>
               </div>
@@ -154,7 +157,7 @@
             >
               <div>
                 <!-- title -->
-                <h2 class="font-weight-bold dark-blue fs-50">
+                <h2 class="font-weight-bold dark-blue fs-40">
                   Get more customers through us
                 </h2>
                 <!--checked list -->
@@ -556,7 +559,9 @@
                     align-items-center
                   "
                 >
-                  <hr class="m-0 bg-lightred col-2 hr-common-padding br-radius7" />
+                  <hr
+                    class="m-0 bg-lightred col-2 hr-common-padding br-radius7"
+                  />
                 </div>
                 <div>
                   <p class="fs-14 text-center text-lg-left text-xl-left">
@@ -653,7 +658,9 @@
                     align-items-center
                   "
                 >
-                  <hr class="m-0 bg-purple col-2 hr-common-padding br-radius7" />
+                  <hr
+                    class="m-0 bg-purple col-2 hr-common-padding br-radius7"
+                  />
                 </div>
                 <div>
                   <p class="fs-14 text-center text-lg-left text-xl-left">
@@ -703,7 +710,15 @@
                     align-items-center
                   "
                 >
-                  <hr class="m-0 bg-lightgreen2 col-2 hr-common-padding br-radius7" />
+                  <hr
+                    class="
+                      m-0
+                      bg-lightgreen2
+                      col-2
+                      hr-common-padding
+                      br-radius7
+                    "
+                  />
                 </div>
                 <div>
                   <p class="fs-14 text-center text-lg-left text-xl-left">
@@ -801,7 +816,9 @@
                     align-items-center
                   "
                 >
-                  <hr class="m-0 bg-orange col-2 hr-common-padding br-radius7" />
+                  <hr
+                    class="m-0 bg-orange col-2 hr-common-padding br-radius7"
+                  />
                 </div>
                 <div>
                   <p class="fs-14 text-center text-lg-left text-xl-left">
@@ -1140,7 +1157,9 @@
             <div>
               <h5 class="font-weight-400 fs-32">Measure your success</h5>
               <div class="py-3 d-flex justify-content-start">
-                <hr class="bg-darkblue2 col-2 m-0 hr-common-padding br-radius7" />
+                <hr
+                  class="bg-darkblue2 col-2 m-0 hr-common-padding br-radius7"
+                />
               </div>
               <p class="py-2 font-weight-500 fs-18">
                 Whatever you are about to start your business from scratch or
@@ -1180,7 +1199,9 @@
             <div>
               <h5 class="font-weight-400 fs-32">Marketing made easy</h5>
               <div class="py-3 d-flex justify-content-start">
-                <hr class="bg-darkblue2 col-2 m-0 hr-common-padding br-radius7" />
+                <hr
+                  class="bg-darkblue2 col-2 m-0 hr-common-padding br-radius7"
+                />
               </div>
               <p class="py-2 font-weight-500 fs-18">
                 The leads are sent to you via Ageras' exciting nationwide
