--- a/accountant.html
+++ b/accountant.html
@@ -91,7 +91,10 @@
                 </button>
               </div>
               <div class="d-none d-lg-block d-xl-block">
-                <button class="inActive-button px-4 py-2 br-radius7">
+                <button
+                  class="inActive-button px-4 py-2 br-radius7"
+                  onclick="window.location.href='steps.html'"
+                >
                   Get a call
                 </button>
               </div>
