steps images updated and quotation image added in partners.html file

--- a/partners.html
+++ b/partners.html
@@ -1291,10 +1291,18 @@
             <div class="col-12 col-lg-6 col-xl-6 py-5">
               <!-- title , content-->
               <div>
-                <h3 class="font-weight-bold m-0 py-3 fs-40">
-                  Satisfied partners
-                </h3>
-                <p class="font-weight-300">
+                <div class="d-flex justify-content-center justify-content-lg-start justify-content-xl-start">
+                  <div>
+                    <img src="./assets/images/q1.png" class="h-20px" />
+                  </div>
+                  <h3 class="font-weight-bold m-0 px-1 py-3 fs-40 main-title-contaienr">
+                    Satisfied partners
+                  </h3>
+                  <div class="d-flex align-items-end">
+                    <img src="./assets/images/q2.png" class="h-20px" />
+                  </div>
+                </div>
+                <p class="font-weight-300 py-4">
                   My customer base comes from Ageras - It's my way, together
                   with Ageras, to find the customers who are best served with me
                   - and where I am best served with them. I like that there are
@@ -1306,7 +1314,6 @@
               <div
                 class="
                   d-flex
-                  py-4
                   d-flex
                   justify-content-center
                   justify-content-lg-start
