Line issue solve

--- a/index.html
+++ b/index.html
@@ -1728,7 +1728,7 @@
       </div>
     </div>
     <!-- section 13 , 14 , 15-->
-    <div>
+    <div class="position-relative" style="overflow: hidden;">
       <div class="position-absolute">
         <img src="./assets/images/layer.png" alt="" class="w-100" />
       </div>
@@ -1952,7 +1952,7 @@
           </div>
           <!-- right side -->
           <div class="col-12 col-lg-8 col-xl-8">
-            <img src="./assets/images/Group39173.png" alt="" class="w-100" />
+            <img src="./assets/images/Group39173.png" alt="" class="w-100 position-relative" style="z-index: 10;"/>
           </div>
         </div>
         <!-- left bottom circle -->
