transition added on sidenav and popup added on partner , accountant and index page

--- a/steps.html
+++ b/steps.html
@@ -95,7 +95,9 @@
                     "
                     onclick="myFunction()"
                   >
-                    <h6 class="m-0 fs-17 dark-blue2 font-weight-500">ACCOUNTANT</h6>
+                    <h6 class="m-0 fs-17 dark-blue2 font-weight-500">
+                      ACCOUNTANT
+                    </h6>
                     <img
                       src="./assets/images/down-arrow-green.png"
                       class="h-15px"
@@ -555,7 +557,8 @@
                 </div>
                 <div>
                   <p class="m-0 fs-11">
-                    READ OUR <span class="primary font-weight-500">PRIVACY POLICY</span>
+                    READ OUR
+                    <span class="primary font-weight-500">PRIVACY POLICY</span>
                   </p>
                 </div>
               </div>
@@ -639,6 +642,7 @@
           step4.style.display = "block";
         }
       }
-    </script>
+
+</script>
   </body>
 </html>
