Close modal button fixes

--- a/accountant.html
+++ b/accountant.html
@@ -1409,6 +1409,7 @@
                           fs-22
                         "
                         data-toggle="modal" data-target=".bd-example-modal-lg"
+                        onclick="activeStep(`step2`)"
                       >
                         Get 3 Offers - Free and without obligation
                       </button>
