--- a/index.html
+++ b/index.html
@@ -2072,6 +2072,7 @@
                         fs-22
                       "
                       data-toggle="modal" data-target=".bd-example-modal-lg"
+                      onclick="activeStep(`step2`)"
                     >
                       Get 3 Offers - Free and without obligation
                     </button>
