--- a/partners.html
+++ b/partners.html
@@ -2098,6 +2098,7 @@
                       fs-22
                     "
                     data-toggle="modal" data-target=".bd-example-modal-lg"
+                    onclick="activeStep(`step2`)"
                   >
                     Get 3 Offers - Free and without obligation
                   </button>
