height fit content removed

--- a/partners.html
+++ b/partners.html
@@ -294,7 +294,7 @@
                 px-0
                 justify-content-center
               ">
-        <img src="./assets/images/partner-s1.png" class="w-100 h-fitContent" alt="" />
+        <img src="./assets/images/partner-s1.png" class="w-100" alt="" />
     </div>
     </div>
     </div>
