--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 
 <body>
@@ -124,6 +125,7 @@
                 justify-content-center
                 py-2 py-lg-5 py-xl-5
               "
+              data-aos="fade-down"
             >
               <div>
                 <!-- title -->
@@ -310,7 +312,7 @@
     </div>
     </div>
     <div class="container py-4 px-2 position-relative">
-        <div class="section2-container">
+        <div class="section2-container"               data-aos="fade-bottom">
             <div class="bg-white py-4 px-3 company-deals">
                 <!-- title -->
                 <div class="title-container d-flex justify-content-center">
@@ -371,10 +373,10 @@
     <div class="container py-4 position-relative">
         <div class="section3">
             <!-- title -->
-            <div class="text-center">
+            <div class="text-center"               data-aos="fade-down">
                 <h3 class="fs-50 font-weight-bold">That is how it works</h3>
             </div>
-            <div class="col-12 d-flex justify-content-center py-5">
+            <div class="col-12 d-flex justify-content-center py-5"               >
                 <div class="
               contact-description
               col-12 col-lg-10 col-lg-10
@@ -384,7 +386,7 @@
               flex-column flex-lg-row flex-xl-row
             ">
                     <!-- left side -->
-                    <div class="col-12 col-lg-6 col-xl-6 left-side px-0">
+                    <div class="col-12 col-lg-6 col-xl-6 left-side px-0" data-aos="fade-right">
                         <!-- 1st -->
                         <div class="common-box px-3">
                             <div class="py-4">
@@ -443,11 +445,12 @@
                 py-3
                 common-box
                 bg-white
-              ">
-                        <div class="content-img">
+              "
+              >
+                        <div class="content-img" >
                             <img src="./assets/images/Image@3x.png" class="h-290px" alt="" />
                         </div>
-                        <div class="d-flex justify-content-center align-items-center py-5">
+                        <div class="d-flex justify-content-center align-items-center py-5" >
                             <div>
                                 <img src="./assets/images/Group-32@3x.png" class="h-50px" alt="" />
                             </div>
@@ -472,7 +475,7 @@
           img-position-container
           justify-content-start
           mt-5
-        ">
+        " >
             <img src="./assets/images/Path8691-flip.png" alt="" class="w-70per z-index-1" />
         </div>
         <div class="
@@ -481,10 +484,12 @@
           d-flex
           img-position-container
           justify-content-end
-        ">
+        "
+
+        >
             <img src="./assets/images/Path8691.png" alt="" class="w-70per z-index-1" />
         </div>
-        <div class="container py-4">
+        <div class="container py-4" >
             <div class="section4-column">
                 <!-- 1st row -->
                 <div class="
@@ -501,10 +506,10 @@
                 py-2 py-lg-0 py-xl-0
                 absolute-img-container
               ">
-                        <img src="./assets/images/Group-38359.png" alt="" class="w-100" />
+                        <img src="./assets/images/Group-38359.png" alt="" class="w-100" data-aos="fade-right" />
                     </div>
                     <div class="col-10 col-lg-4 col-xl-4 py-2 py-lg-0 py-xl-0">
-                        <img src="./assets/images/Group38356.png" alt="" class="w-100" />
+                        <img src="./assets/images/Group38356.png" alt="" class="w-100" data-aos="fade-left" />
                     </div>
                 </div>
                 <!-- 2nd -->
@@ -516,7 +521,7 @@
               pt-lg-5 pt-xl-5
               z-index-1
             ">
-                    <div class="col-10 col-lg-6 col-xl-6">
+                    <div class="col-10 col-lg-6 col-xl-6" data-aos="fade-down">
                         <h2 class="text-center dark-blue2 font-weight-bold">
                             See what our customers say about our service
                         </h2>
@@ -542,7 +547,7 @@
             justify-content-lg-between justify-content-xl-between
           ">
                 <div class="col-10 col-lg-4 col-xl-4 py-2 py-lg-0 py-xl-0">
-                    <img src="./assets/images/Group38358.png" alt="" class="w-100" />
+                    <img src="./assets/images/Group38358.png" alt="" class="w-100" data-aos="fade-right" />
                 </div>
                 <div class="
               z-index-1
@@ -550,22 +555,22 @@
               py-2 py-lg-0 py-xl-0
               absolute-img-container2
             ">
-                    <img src="./assets/images/Group38357.png" alt="" class="w-100" />
+                    <img src="./assets/images/Group38357.png" alt="" class="w-100" data-aos="fade-left" />
                 </div>
             </div>
         </div>
     </div>
     <!-- section5 starts from here -->
     <div class="container section5-container py-5">
-        <div class="d-flex flex-column justify-content-center align-items-center">
+        <div class="d-flex flex-column justify-content-center align-items-center" >
             <!-- title -->
-            <div class="col-12 col-lg-8 col-xl-8 py-3">
-                <h1 class="fs-50 font-weight-bold text-center">
+            <div class="col-12 col-lg-8 col-xl-8 py-3" >
+                <h1 class="fs-50 font-weight-bold text-center" data-aos="fade-down">
                     Click on the service you want 3 offers on
                 </h1>
             </div>
             <!-- navigations -->
-            <div class="
+            <div data-aos="fade-down" class="
             col-12
             px-0
             navigation-links-container
@@ -615,7 +620,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-12 px-0 d-flex flex-column flex-lg-row flex-xl-row py-5">
+            <div class="col-12 px-0 d-flex flex-column flex-lg-row flex-xl-row py-5" data-aos="fade-left">
                 <!-- left side -->
                 <div class="col-12 col-lg-6 col-xl-6">
                     <img src="./assets/images/Group-39111@3x.png" alt="" class="w-100" />
@@ -694,9 +699,9 @@
             <div class="d-flex flex-column justify-content-center align-items-center">
                 <div class="col-12 px-0 d-flex flex-column flex-lg-row flex-xl-row pt-5">
                     <!-- left side -->
-                    <div class="col-12 col-lg-6 col-xl-6 py-5">
+                    <div class="col-12 col-lg-6 col-xl-6 py-5" data-aos="fade-down">
                         <!-- title , content-->
-                        <div>
+                        <div >
                             <h3 class="font-weight-bold m-0 py-3">WHO IS REVIMATCH?</h3>
                             <p>
                                 Revimatch is Denmark's most specialized intermediary in financial services.
@@ -720,7 +725,7 @@
                         </div>
                     </div>
                     <!-- right side -->
-                    <div class="col-12 col-lg-6 col-xl-6">
+                    <div class="col-12 col-lg-6 col-xl-6" data-aos="fade-top">
                         <img src="./assets/images/Sandra-removebg-preview@3x.png" alt="" class="w-100" />
                     </div>
                 </div>
@@ -743,7 +748,7 @@
               justify-content-lg-between justify-content-xl-between
             ">
                     <!-- left side -->
-                    <div class="col-12 col-lg-5 col-xl-5">
+                    <div class="col-12 col-lg-5 col-xl-5" data-aos="fade-right">
                         <!-- title -->
                         <div>
                             <h3 class="
@@ -759,7 +764,7 @@
                         </div>
                     </div>
                     <!-- right side -->
-                    <div class="col-12 col-lg-5 col-xl-5 pt-5 pb-2 question-container px-0">
+                    <div class="col-12 col-lg-5 col-xl-5 pt-5 pb-2 question-container px-0" data-aos="fade-left">
                         <!-- 1st box -->
                         <div class="
                   px-3
@@ -835,7 +840,7 @@
         <div class="position-absolute right-0 d-flex justify-content-end">
             <img src="./assets/images/Path8691.png" alt="" class="w-60per z-index-1" />
         </div>
-        <div class="container d-flex flex-column flex-lg-row flex-xl-row px-2 pt-3">
+        <div class="container d-flex flex-column flex-lg-row flex-xl-row px-2 pt-3" data-aos="fade-left">
             <!-- left side -->
             <div class="col-12 col-lg-6 col-xl-6 left-side-content py-4">
                 <!-- title -->
@@ -880,7 +885,7 @@
     </div>
     <!-- section 9 -->
     <div class="section9-container py-5">
-        <div class="container d-flex flex-column flex-lg-row flex-xl-row px-2 py-3">
+        <div class="container d-flex flex-column flex-lg-row flex-xl-row px-2 py-3" data-aos="fade-right">
             <div class="position-absolute left-0 line-container">
                 <img src="./assets/images/Mask-Group-35.png" alt="" class="w-61per" />
             </div>
@@ -938,7 +943,7 @@
         <div class="position-absolute right-0 d-flex justify-content-end">
             <img src="./assets/images/Path8691.png" alt="" class="w-90per z-index-1" />
         </div>
-        <div class="container py-4">
+        <div class="container py-4" data-aos="fade-down">
             <div>
                 <h1 class="py-2 m-0 dark-blue2 font-weight-bold fs-50 text-center">
                     Frequently Ask Questions
@@ -1163,7 +1168,9 @@
             section11-container
             d-flex
             flex-column flex-lg-row flex-xl-row
-          ">
+          "
+          data-aos="fade-up"
+          >
                 <!-- left-side -->
                 <div class="col-12 col-lg-7 col-xl-7 left-side-container">
                     <img src="./assets/images/Rectangle.png" alt="" class="w-100 h-lg-100 h-xl-100" />
@@ -1247,7 +1254,7 @@
           flex-column flex-lg-row flex-xl-row
         ">
             <!-- left side -->
-            <div class="col-12 col-lg-6 col-xl-6 px-0">
+            <div class="col-12 col-lg-6 col-xl-6 px-0" data-aos="fade-right">
                 <div class="section12-common-box br-radius7 bg-lightPurple">
                     <div class="social-content-container col-10 py-3 px-2 px-lg-4 px-xl-4">
                         <p class="m-0 darkbrown-color font-weight-500 fs-12">
@@ -1280,7 +1287,7 @@
             align-items-center
             pt-5 pt-lg-5 pt-xl-5
             pb-0 pb-lg-5 pb-xl-5
-          ">
+          " data-aos="fade-left">
                 <div class="px-3 py-5 py-lg-0 py-xl-0">
                     <h1 class="fs-32 font-weight-bold darkbrown-color">
                         Explanation about you Social Media For Interaction.
@@ -1322,7 +1329,7 @@
                 align-items-center
                 pt-0 pt-lg-5 pt-xl-5
                 pb-0 pb-lg-5 pb-xl-5
-              ">
+              " data-aos="fade-right">
                         <div class="px-3">
                             <h1 class="fs-32 darkbrown-color font-weight-bold">
                                 Explanation about you Social Media For Interaction.
@@ -1341,7 +1348,7 @@
                         </div>
                     </div>
                     <!-- right-side -->
-                    <div class="col-12 col-lg-6 col-xl-6 px-0 d-flex justify-content-end">
+                    <div class="col-12 col-lg-6 col-xl-6 px-0 d-flex justify-content-end" data-aos="fade-left">
                         <div class="section12-common-box br-radius7 bg-lightblue">
                             <div class="
                     social-content-container2
@@ -1390,7 +1397,7 @@
             flex-column flex-lg-row flex-xl-row
           ">
                 <!-- left side -->
-                <div class="col-12 col-lg-6 col-xl-6 px-0">
+                <div class="col-12 col-lg-6 col-xl-6 px-0" data-aos="fade-right">
                     <div class="section12-common-box br-radius7 bg-lightGreen">
                         <div class="
                   social-content-container
@@ -1428,7 +1435,7 @@
               align-items-center
               pt-5 pt-lg-5 pt-xl-5
               pb-0 pb-lg-5 pb-xl-5
-            ">
+            " data-aos="fade-left">
                     <div class="px-3 py-5 py-lg-0 py-xl-0">
                         <h1 class="fs-32 darkbrown-color font-weight-bold">
                             Explanation about you Social Media For Interaction.
@@ -1456,7 +1463,7 @@
             flex-column flex-lg-row flex-xl-row
           ">
                 <!-- left side -->
-                <div class="col-12 col-lg-4 col-xl-4">
+                <div class="col-12 col-lg-4 col-xl-4" data-aos="fade-up">
                     <!-- title -->
                     <div>
                         <h6 class="
@@ -1482,7 +1489,7 @@
                     </div>
                 </div>
                 <!-- right side -->
-                <div class="col-12 col-lg-8 col-xl-8">
+                <div class="col-12 col-lg-8 col-xl-8" data-aos="fade-down">
                     <img src="./assets/images/Group39173.png" alt="" class="w-100 position-relative" style="z-index: 10;" />
                 </div>
             </div>
@@ -1493,7 +1500,7 @@
         </div>
     </div>
     <!-- footer starts from here -->
-    <div class="footer-container py-5">
+    <div class="footer-container py-5" data-aos="fade-up">
         <div class="container px-2 py-5">
             <!-- lists -->
             <div class="
@@ -2085,7 +2092,17 @@
       </div>
     </div>
     <!-- modal ends here -->
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
+           AOS.init({
+            duration:1500
+        });
+        let scrollRef = 0;
+
+window.addEventListener('scroll', function() {
+  // increase value up to 10, then refresh AOS
+  scrollRef <= 10 ? scrollRef++ : AOS.refresh();
+});
       function openNav() {
         document.getElementById("mySidenav").classList.add("active");
       }
@@ -2152,5 +2169,6 @@
         }
       }
     </script>
+  
   </body>
 </html>
